--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,23 +1,49 @@
 .form {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 15px;
+  border: 1px solid black;
   width: 400px;
-  padding: 8px;
-  border: 1px solid #2a2a2a;
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  margin: 30px 0;
-}
-
-.formField {
-  width: 200px;
-  display: flex;
-  flex-direction: column;
 }
 
 .formLabel {
   font-size: 20px;
+  margin-bottom: 3px;
+}
+
+.formLabelInput {
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 3px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.formLabelInput:hover,
+.formLabelInput:focus {
+  border: 1px solid #e84a5f;
+  box-shadow: 0.5px 0.5px 5px 0.5px #e84a5f;
 }
 
 .formButton {
-  width: 100px;
+  padding: 5px;
+  font-size: 15px;
+  border: 1px solid rgb(185, 181, 181);
+  border-radius: 5px;
+  transition: background-color 250ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    color 250ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    border 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.formButton:focus,
+.formButton:hover {
+  border: 1px solid #e84a5f;
+  background-color: #e84a5f;
+  color: white;
 }
