--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,4 +1,23 @@
-.container {
-  margin-top: 30px;
-  margin-bottom: 30px;
+.filterContainer {
+  padding: 20px;
+}
+
+.filterLabel {
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.filterInput {
+  padding: 5px;
+  border: 1px solid black;
+  border-radius: 3px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.075, 0.82, 0.165, 1),
+    box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.filterInput:hover,
+.filterInput:focus {
+  border: 1px solid #e84a5f;
+  box-shadow: 0.5px 0.5px 5px 0.5px #e84a5f;
 }
